--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 <div class="se_contents">
    {{ post.excerpt }}
 </div>
-<a href="{{ site.baseurl }}{{ post.url }}" class="summaryMore">Read More</a>
+<a href="{{ site.baseurl }}{{ post.url }}" class="summaryMore"></a>
 <span class="lineBreaker"><img src="img/blank.gif" alt="" width="10" height="1" /></span>
 {% endfor %}
 </div>
