blank image change

--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@ layout: default
    {{ post.excerpt }}
 </div>
 <a href="{{ site.baseurl }}{{ post.url }}" class="summaryMore"></a>
-<span class="lineBreaker"><img src="img/blank.gif" alt="" width="10" height="1" /></span>
+<span class="lineBreaker"><img src="images/blank.gif" alt="" width="10" height="1" /></span>
 {% endfor %}
