--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
   <p class="postMeta">Written on {{ post.date | date: "%B %e, %Y" }}</p>
 </div>
 <div class="se_contents">
-  {{ post.content | extract_excerpt }}
+   {{ post.excerpt }}
 </div>
 <a href="{{ site.baseurl }}{{ post.url }}" class="summaryMore"></a>
 <span class="lineBreaker"><img src="images/blank.gif" alt="" width="10" height="1" /></span>
